--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-    <meta name="description" content="WeGoToVayatra - Your ultimate travel planning destination. Discover amazing destinations, plan your trips, and create unforgettable memories.">
+    <meta name="description" content="WeGoToIndyatra - Your ultimate travel planning destination. Discover amazing destinations, plan your trips, and create unforgettable memories.">
     <meta name="keywords" content="travel, tourism, vacation, adventure, destinations, travel planning">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -134,7 +134,7 @@
                     <div class="contact-details">
                         <div class="contact-item">
                             <i class="ri-mail-line"></i>
-                            <p>info@vayatra.com</p>
+                            <p>info@Indyatra.com</p>
                         </div>
                         <div class="contact-item">
                             <i class="ri-phone-line"></i>
